syntax = "proto3";

package auth.models.v1;
option go_package = "github.com/nineteen-night/empty-room-game/internal/auth/pb/models";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password_hash = 4;
    int32 max_room_reached = 5;
}

message Partnership {
    string id = 1;
    string user1_id = 2;
    string user2_id = 3;
}